[package]
name = "autotuner"
version = "0.1.0"
edition = "2024"

[features]
default = ["llvm-10"]
llvm-10 = ["llvm-sys-100"]
llvm-19 = ["llvm-sys-191"]

[build-dependencies]
lalrpop = "0.22.2"

[dependencies]
anyhow = "1.0.98"
argh = "0.1.13"
fxhash = "0.2.1"
hashlru = "0.11.1"
lalrpop-util = { version = "0.21.0", features = ["lexer", "unicode"] }
inquire = "0.7.5"
lazy_static = "1.5.0"
libloading = "0.8.8"
rand = "0.9.1"
serde = { version = "1.0.219", features = ["rc"] }
serde_json = "1.0.140"
signal-hook-registry = "1.4.5"
llvm-sys-100 = { package = "llvm-sys", version = "100.2.4", optional = true }
llvm-sys-191 = { package = "llvm-sys", version = "191.0.0", optional = true }

[[bin]]
name = "autotuner"
path = "src/bin/autotuner.rs"

[[bin]]
name = "generate-metadata"
path = "src/bin/generate-metadata.rs"
