[package]
name = "autotuner"
version = "0.1.0"
edition = "2024"

[dependencies]
affinity = "0.1.2"
anyhow = "1.0.98"
argh = "0.1.13"
fxhash = "0.2.1"
inquire = "0.7.5"
lazy_static = "1.5.0"
libc = "0.2.174"
libloading = "0.8.8"
rand = "0.9.1"
rayon = "1.11.0"
serde = { version = "1.0.219", features = ["rc"] }
serde_json = "1.0.140"
sha2 = "0.10.9"
signal-hook-registry = "1.4.5"
tempdir = "0.3.7"

[[bin]]
name = "autotuner"
path = "src/main.rs"
